  a small ressource leak with others all worked well. These anomalies
  are now fixed. Note that they only appeared during system initaliziation
  once the system was running, nothing bad happened.
- improved error reporting for template errors on startup. They are now
  shown on the console and the start-up tty. Formerly, they were only
  visible in debug mode.
---------------------------------------------------------------------------
Version 0.9.4 (RGer), 2005-07-25
- finally added the TCP sender. It now supports non-blocking mode, no
  longer disabling message reception during connect. As it is now, it
  is usable in production. The code could be more sophisticated, but
  I've kept it short in anticipation of the move to liblogging, which
  will lead to the removal of the code just written ;)
- the "exiting on signal..." message still had the "syslogd" name in 
  it. Changed this to "rsyslogd", as we do not have a large user base
  yet, this should pose no problem.
- fixed "the semiconlon" bug. rsyslogd dumped core if a write-db action
  was specified but no semicolon was given after the password (an empty
  template was ok, but the semicolon needed to be present).
- changed a default for traditional output format. During testing, it
  was seen that the timestamp written to file in default format was
  the time of message reception, not the time specified in the TIMESTAMP
  field of the message itself. Traditionally, the message TIMESTAMP is
  used and this has been changed now.
---------------------------------------------------------------------------
Version 0.9.3 (RGer), 2005-07-19
- fixed a bug in the message parser. In June, the RFC 3164 timestamp
  was not correctly parsed (yes, only in June and some other months,
  see the code comment to learn why...)
- added the ability to specify the destination port when forwarding
  syslog messages (both for TCP and UDP)
- added an very experimental TCP sender (activated by